Update the repo

--- a/feature_engineering_practice/Practice Proposal.ipynb
+++ b/feature_engineering_practice/Practice Proposal.ipynb
@@ -25,18 +25,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "19ecQfLVZGvm"
       },
       "outputs": [],
       "source": [
-        "repository_url = 'https://github.com/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1'"
+        "repository_name = \"ML2-MBD-EN-OCT-2021-S-1\"\n",
+        "repository_url = 'https://github.com/acastellanos-ie/' + repository_name"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "DMgL9W4-0wXE",
         "outputId": "49ef3270-a877-4c25-eb90-3c389d4ea821",
@@ -73,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Dy8O4JuL00hJ",
         "outputId": "b1ccb1f6-9677-44ca-9f37-53a81c6fdd42",
@@ -121,7 +122,7 @@
         }
       ],
       "source": [
-        "! pip install -Uqqr ML2-MBD-EN-OCT-2021-S-1/requirements.txt"
+        "! pip install -Uqqr $repository_name/requirements.txt"
       ]
     },
     {
@@ -158,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "IPNxL2Vsch3w",
         "outputId": "3e0ad2c5-ffc4-4834-90a5-8b661cb32743",
@@ -176,20 +177,7 @@
         }
       ],
       "source": [
-        "%cd ML2-MBD-EN-OCT-2021-S-1/feature_engineering_practice"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SKqBBIxf03lS"
-      },
-      "source": [
-        "Ensure that you have the GPU runtime activated:\n",
-        "\n",
-        "![](https://miro.medium.com/max/3006/1*vOkqNhJNl1204kOhqq59zA.png)\n",
-        "\n",
-        "Now you have everything you need to execute the code in Colab"
+        "%cd $repository_name/feature_engineering_practice"
       ]
     },
     {
@@ -203,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "hj-rVLo9Te7t",
         "outputId": "61d91a70-cdda-4083-9936-29762051ff70",
@@ -286,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "ZUhj1aTpU3KE"
       },
@@ -299,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "yh0sfsEwU3KE",
         "outputId": "c0261e37-b07b-4b58-811d-4acf18910fcd",
@@ -459,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "qwEPW7x4U3KF"
       },
@@ -26180,7 +26168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "aBG3mh9UU3KI",
         "outputId": "90ba58b8-77d5-40a8-e925-551849a0d1ae",
@@ -26216,7 +26204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "CuiJy0WkU3KI",
         "outputId": "d1cf9ed6-50f5-4140-e2bf-c5ba10407107",
@@ -26273,7 +26261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "FjVeyvIZmjbA"
       },
@@ -26293,7 +26281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "QpbroxO-mjbB"
       },
@@ -26315,7 +26303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "Gq8oNVFsU3KJ"
       },
@@ -26338,7 +26326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "87ebr66WU3KK",
         "outputId": "8bd6336c-d2eb-4703-a916-5c284f061e2f",
@@ -26387,7 +26375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "ZdQkOkp0mjbD",
         "outputId": "f5a878cb-81f2-4658-d7f8-9d2a09c7a4ea",
@@ -26717,7 +26705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "xUWd-4G6U3KQ",
         "outputId": "d21d7d6d-eac9-45a2-9ca8-b639285eb590",
@@ -26753,7 +26741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "code_folding": [],
         "id": "GZSv3-gmU3KR"
@@ -26774,7 +26762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "8CFpo2UtU3KR",
         "outputId": "654bf796-e792-4131-d2d4-aa5d8124c810",
@@ -27162,7 +27150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "dOngcspOmjbK",
         "outputId": "fdea567f-b2a8-429e-b608-f150995bccd7",
