Update the repo

--- a/naive_bayes_practice/practice_proposal.ipynb
+++ b/naive_bayes_practice/practice_proposal.ipynb
@@ -56,7 +56,8 @@
         "id": "19ecQfLVZGvm"
       },
       "source": [
-        "repository_url = 'https://github.com/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1'"
+        "repository_name = \"ML2-MBD-EN-OCT-2021-S-1\"\n",
+        "repository_url = 'https://github.com/acastellanos-ie/' + repository_name"
       ],
       "execution_count": null,
       "outputs": []
@@ -108,7 +109,7 @@
         }
       },
       "source": [
-        "! pip install -Uqqr ML2-MBD-EN-OCT-2021-S-1/requirements.txt"
+        "! pip install -Uqqr $repository_name/requirements.txt"
       ],
       "execution_count": null,
       "outputs": [
@@ -194,7 +195,7 @@
         }
       },
       "source": [
-        "%cd ML2-MBD-EN-OCT-2021-S-1/naive_bayes_practice"
+        "%cd $repository_name/naive_bayes_practice"
       ],
       "execution_count": null,
       "outputs": [
