--- a/svm_practice/practice_proposal.ipynb
+++ b/svm_practice/practice_proposal.ipynb
@@ -56,9 +56,10 @@
         "id": "19ecQfLVZGvm"
       },
       "source": [
-        "repository_url = 'https://github.com/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1'"
+        "repository_name = \"ML2-MBD-EN-OCT-2021-S-1\"\n",
+        "repository_url = 'https://github.com/acastellanos-ie/' + repository_name"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +74,7 @@
       "source": [
         "! git clone $repository_url"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,9 +109,9 @@
         }
       },
       "source": [
-        "! pip install -Uqqr ML2-MBD-EN-OCT-2021-S-1/requirements.txt"
+        "! pip install -Uqqr $repository_name/requirements.txt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,9 +195,9 @@
         }
       },
       "source": [
-        "%cd ML2-MBD-EN-OCT-2021-S-1/svm_practice"
+        "%cd $repository_name/svm_practice"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,19 +206,6 @@
             "/content/ML2-MBD-EN-OCT-2021-S-1/svm_practice\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SKqBBIxf03lS"
-      },
-      "source": [
-        "Ensure that you have the GPU runtime activated:\n",
-        "\n",
-        "![](https://miro.medium.com/max/3006/1*vOkqNhJNl1204kOhqq59zA.png)\n",
-        "\n",
-        "Now you have everything you need to execute the code in Colab"
       ]
     },
     {
@@ -254,7 +242,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore') # Do not print warning messages"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -293,7 +281,7 @@
         "\n",
         "from sklearn.model_selection import cross_val_score"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +322,7 @@
         "# Generate the labels\n",
         "y = np.vstack((np.array([1]*npos).reshape(-1,1), np.array([0]*nneg).reshape(-1,1)))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +353,7 @@
         "plt.scatter(Xpositive[:,0],Xpositive[:,1],label=\"Positive\")\n",
         "plt.legend();"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -415,7 +403,7 @@
         "\n",
         "print(\"Cross-validated Accuracy = {:.4f}\".format(np.mean(cross_val_score(svm_clf, x, y))))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +453,7 @@
         "    \n",
         "plot_svm_decision(x, y, svm_clf.fit(x,y))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -511,7 +499,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +510,7 @@
       "source": [
         "# Predict labels on test"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -545,7 +533,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -556,7 +544,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,7 +575,7 @@
         "plt.figure(figsize=(15,15))\n",
         "plt.scatter(train.X, train.Y, c=train.Label);"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -658,7 +646,7 @@
         "    \n",
         "svm_polynomial_kernel(degree)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -694,7 +682,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -730,7 +718,7 @@
         "X = dataset_counts\n",
         "y = dataset['class']"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -755,7 +743,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     }
   ]
