Add github section

--- a/ml_pipeline_review/ml_pipeline.ipynb
+++ b/ml_pipeline_review/ml_pipeline.ipynb
@@ -13,10 +13,39 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Github"
+        "# Github\n",
+        "\n",
+        "For this course, we are going to use Github as code repository. Github is just another provider for version control using Git.\n",
+        "\n",
+        "Version control is a key component of any software development project, machine learning included. It is not the scope of this project to provide a deep understanding of Github or the lifecycle of an ML project; nevertheless, I would like to use the tool so you are familiar with it. You will very likely use Github in your future projects, so I strongly advise you to give it a try.\n",
+        "\n",
+        "Very briefly, Github is a platform where you can upload and store your code and share it with your collaborators. It facilitates code sharing by providing the tools that ensure that all the collaborators work with the same code version, thus avoiding conflicts among different versions.\n",
+        "\n",
+        "To that end, you create a repository (i.e., you should have a different repo for each project that you are working on) where you can download (pull command) the latest version of the code and upload (push command) your updates to it.\n",
+        "\n",
+        "These are just the basics for Git. For more details in Git and Github, I recommend you to check the [Github Learning Lab](https://lab.github.com/) where you can find several courses and learning paths to master Github and its use. You will not require most of this knowledge for the course since we will only use some of the basic Github features. In any case, if you want more details on the different features available, the [First Day](https://lab.github.com/githubtraining/first-day-on-github) and [First Week](https://lab.github.com/githubtraining/first-week-on-github) learning paths will be more than enough.\n",
+        "\n",
+        "## Course Repository\n",
+        "\n",
+        "I have already created the repository for the course:\n",
+        "\n",
+        "https://github.com/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1\n",
+        "\n",
+        "In this repository, you can find the different practices and the related files. As you can see, you do not yet have the solutions to the exercises. I will upload them after the practice sessions.\n",
+        "\n",
+        "In the repository, you can also find the details on how to configure the repository in your local computer if you want to execute the files locally. If you prefer to avoid the burden of configuring and running the code on your laptop, we have great (and almost free) alternatives nowadays to do it on the cloud. In particular, for this course, I have prepared the notebooks so you can run them online on Google Colab."
       ],
       "metadata": {
         "id": "qj-G5mhKZlpI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Google Colab"
+      ],
+      "metadata": {
+        "id": "JbFyDcdHiQA7"
       }
     },
     {
