update repo name

--- a/data_cleaning_practice/practice_solution.ipynb
+++ b/data_cleaning_practice/practice_solution.ipynb
@@ -22,7 +22,6 @@
     "colab": {
       "name": "practice_solution.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -69,7 +68,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1caf5ad4-ea2c-4a45-ca4d-5af96e11be29"
+        "outputId": "e10faaef-d6d1-4b57-c484-fb1b3e96e245"
       },
       "source": [
         "! git clone $repository_url"
@@ -81,12 +80,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'ML2-MBD-EN-OCT-2021-S-1'...\n",
-            "remote: Enumerating objects: 110, done.\u001b[K\n",
-            "remote: Counting objects: 100% (110/110), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (103/103), done.\u001b[K\n",
-            "remote: Total 110 (delta 37), reused 38 (delta 3), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (110/110), 18.32 MiB | 10.99 MiB/s, done.\n",
-            "Resolving deltas: 100% (37/37), done.\n"
+            "remote: Enumerating objects: 213, done.\u001b[K\n",
+            "remote: Counting objects: 100% (175/175), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (123/123), done.\u001b[K\n",
+            "remote: Total 213 (delta 74), reused 112 (delta 43), pack-reused 38\u001b[K\n",
+            "Receiving objects: 100% (213/213), 31.12 MiB | 19.01 MiB/s, done.\n",
+            "Resolving deltas: 100% (75/75), done.\n"
           ]
         }
       ]
@@ -107,38 +106,43 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "79a954b5-2376-4b46-b59b-d463ec092530"
+        "outputId": "9e1cd7db-0aba-4868-c16e-f4cf58fc0693"
       },
       "source": [
         "! pip install -Uqqr $repository_name/requirements.txt"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |████████████████████████████████| 84 kB 3.3 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 11.2 MB 23.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 261 kB 58.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 62 kB 872 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 25.3 MB 1.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 173.5 MB 11 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 46 kB 4.1 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 69 kB 8.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 631 kB 50.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 884 kB 61.6 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 248 kB 70.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 245 kB 39.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 244 kB 70.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 243 kB 77.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 675 kB 72.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 240 kB 69.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 239 kB 74.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 258 kB 71.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 64 kB 3.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 4.7 MB 31.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 812 kB 69.0 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 507 kB 4.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 11.2 MB 53.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 261 kB 58.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 62 kB 826 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 26.5 MB 1.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 173.6 MB 9.3 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 46 kB 3.0 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 69 kB 6.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 631 kB 49.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 890 kB 70.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 303 kB 70.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 10.9 MB 36.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 675 kB 69.0 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.1 MB 34.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 248 kB 59.0 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 102 kB 59.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 245 kB 59.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 4.7 MB 44.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 244 kB 61.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 75 kB 3.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 243 kB 35.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 240 kB 60.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 239 kB 43.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 258 kB 61.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 64 kB 3.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 812 kB 25.1 MB/s \n",
             "\u001b[K     |████████████████████████████████| 38.1 MB 1.2 MB/s \n",
             "\u001b[?25h  Building wheel for folium (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "  Building wheel for imgaug (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
@@ -188,12 +192,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da2a027e-fbfc-4e78-8edd-920a70569626"
+        "outputId": "408d80b8-c854-403c-c736-f9ea8e86ae79"
       },
       "source": [
+        "repository_name = \"ML2-MBD-EN-OCT-2021-S-1\"\n",
         "%cd $repository_name/data_cleaning_practice"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
