update the repo

--- a/evaluation_metrics_practice/practice_proposal.ipynb
+++ b/evaluation_metrics_practice/practice_proposal.ipynb
@@ -55,7 +55,7 @@
         "id": "19ecQfLVZGvm"
       },
       "source": [
-        "repository_name = \"machine_learning_2\"\n",
+        "repository_name = \"ML2-MBD-EN-OCT-2021-S-1\"\n",
         "repository_url = 'https://github.com/acastellanos-ie/' + repository_name"
       ],
       "execution_count": null,
