update the repo

--- a/evaluation_metrics_practice/practice_solution.ipynb
+++ b/evaluation_metrics_practice/practice_solution.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/acastellanos-ie/machine_learning_2/blob/master/evaluation_metrics_practice/practice_solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1/blob/main/evaluation_metrics_practice/practice_solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -55,10 +55,10 @@
         "id": "19ecQfLVZGvm"
       },
       "source": [
-        "repository_name = \"machine_learning_2\"\n",
+        "repository_name = \"ML2-MBD-EN-OCT-2021-S-1\"\n",
         "repository_url = 'https://github.com/acastellanos-ie/' + repository_name"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
       "source": [
         "! git clone $repository_url"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +190,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore') # Do not print warning messages"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -237,7 +237,7 @@
         "\n",
         "df.dropna(inplace=True)\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,7 +294,7 @@
         "    # Accuracy Score\n",
         "    return accuracy_score(y_test, [pred>optimal_threshold for pred in predictions.pred])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -340,7 +340,7 @@
         "    \n",
         "print(\"Max perfomance = {0:.4f}\".format(max_perf))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +376,7 @@
         "single_split_performance = model_evaluation(X_train, y_train, X_test, y_test)\n",
         "print(\"Single Split Peformance = {0:.4f}\".format(single_split_performance))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,7 +424,7 @@
         "plt.axhline(y=single_split_performance, color='b', linestyle='--', linewidth = 5)\n",
         "plt.text(1, single_split_performance-0.005, \"{0:.2f}\".format(single_split_performance), fontsize=16, color='black', fontweight='bold');"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -513,7 +513,7 @@
         "    \n",
         "    return accuracy_score(y_test, [pred>optimal_threshold for pred in test_predictions.pred])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,7 +551,7 @@
         "    \n",
         "print(\"Max perfomance = {0:.4f}\".format(max_perf))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +587,7 @@
         "plt.title(\"CV results\", fontsize=20)\n",
         "plt.boxplot(cv_perf);"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -648,7 +648,7 @@
         "    \n",
         "print(\"Max perfomance = {0:.4f}\".format(max_perf))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,7 +675,7 @@
         "plt.boxplot([cv_perf, kfold_cv_perf], positions=[1,2,])\n",
         "plt.xticks([1,2], [\"CV\", \"K-fold CV\"], fontsize=16);"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -747,7 +747,7 @@
         "from sklearn.model_selection import cross_val_score\n",
         "cross_val_score(linear_model.LogisticRegression(max_iter=100, solver='liblinear'), X, y, cv=10)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -783,7 +783,7 @@
       "source": [
         "print(\"AVG Accuracy of the 10 folds = {}\".format(np.mean(cross_val_score(linear_model.LogisticRegression(max_iter=100, solver='liblinear'), X, y, cv=10))))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +817,7 @@
       "source": [
         "print(\"AVG F1 of the 10 folds = {}\".format(np.mean(cross_val_score(linear_model.LogisticRegression(max_iter=100, solver='liblinear'), X, y, cv=10, scoring='f1_macro'))))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
