--- a/svm_practice/practice_solution.ipynb
+++ b/svm_practice/practice_solution.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/acastellanos-ie/machine_learning_2/blob/master/svm_practice/practice_solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1/blob/main/svm_practice/practice_solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -56,7 +56,7 @@
         "id": "19ecQfLVZGvm"
       },
       "source": [
-        "repository_name = \"machine_learning_2\"\n",
+        "repository_name = \"ML2-MBD-EN-OCT-2021-S-1\"\n",
         "repository_url = 'https://github.com/acastellanos-ie/' + repository_name"
       ],
       "execution_count": null,
